--- a/index1.html
+++ b/index1.html
@@ -56,16 +56,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Location Mariée</a>
+                        <a class="page-scroll" href="#Location_Mariee">Location Mariée</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Location Invitée</a>
+                        <a class="page-scroll" href="#Location_Invitée">Location Invitée</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Vente Mariée</a>
+                        <a class="page-scroll" href="#Vente_Mariee">Vente Mariée</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Vente Invitée</a>
+                        <a class="page-scroll" href="#Vente_Invitée">Vente Invitée</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Me Contacter</a>
@@ -90,7 +90,7 @@
     </header>
 
     <!-- Location invitée Section -->
-    <section id="services">
+    <section id="Location_Mariee">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -171,8 +171,8 @@
 			
         </div>
 
-    <!-- About Section -->
-    <section id="about">
+    <!-- Location invitée Section -->
+    <section id="Location_Invitée">
         <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -324,11 +324,11 @@
         </div>
     </section>
  <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="Vente_Mariee" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Expériences</h2>
+                    <h2 class="section-heading">Vente Mariée</h2>
 					</br>
                 </div>
             </div>
@@ -340,11 +340,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Robe_sima_surjupe_paillette1.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>Robe Stella</h4>
+                        <p class="text-muted">2200€</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -354,11 +354,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Robe_Adelina.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Robe Adelina</h4>
+                        <p class="text-muted">3000€</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -368,11 +368,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Robe_Sarah.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Robe Sarah</h4>
+                        <p class="text-muted">2800€</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -431,8 +431,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">L'équipe</h2>
+                    <h3 class="section-subheading text-muted">C'est pas vraiment l'équipe mais bon faite genre</h3>
                 </div>
             </div>
             <div class="row">
@@ -469,8 +469,8 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
+                        <h4>Hanane</h4>
+                        <p class="text-muted">Responsable Méthode Agile :p</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -606,18 +606,16 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                            <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+                            <h2>Robe Stella</h2>
+                            <p class="item-intro text-muted">2200€</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/Robe_Stella2.png" alt="">
+                            <p>Robes dignes des modèles haute-couture à des prix accessibles. Le travail du détail, le choix des matières et la sophistication n’ont rien à envier aux grands noms du luxe.</p>
                             <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
+                                <li>Couleur: Blanc</li>
+                                <li>Taille: 38-42</li>
+                                <li>Disponible sur commande</li>
                             </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Dress Stella</button>
                         </div>
                     </div>
                 </div>
@@ -638,12 +636,16 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Robe Adelina</h2>
+                            <p class="item-intro text-muted">3000€</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/Robe_Adelina2.png" alt="">
+                            <p>Robes dignes des modèles haute-couture à des prix accessibles. Le travail du détail, le choix des matières et la sophistication n’ont rien à envier aux grands noms du luxe.</p>
+                            <ul class="list-inline">
+                                <li>Couleur: Blanc</li>
+                                <li>Taille: 38-42</li>
+                                <li>Disponible sur commande</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Robe Adelina</button>
                         </div>
                     </div>
                 </div>
@@ -665,12 +667,16 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                            <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Robe Sarah</h2>
+                            <p class="item-intro text-muted">2800€</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/Robe_Sarah2.png" alt="">
+                            <p>Robes dignes des modèles haute-couture à des prix accessibles. Le travail du détail, le choix des matières et la sophistication n’ont rien à envier aux grands noms du luxe.</p>
+                            <ul class="list-inline">
+                                <li>Couleur: Blanc</li>
+                                <li>Taille: 38-42</li>
+                                <li>Disponible sur commande</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Robe Sarah</button>
                         </div>
                     </div>
                 </div>
